--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -30,12 +30,14 @@
   float: top;
   padding-bottom: 5%;
   font-size: 60px;
+  color: #242424;
 }
 
 .description_container {
   float: bottom;
   padding-bottom: 5%;
   font-size: 20px;
+  color: #242424;
 }
 
 .contact-container {
