--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -5,6 +5,7 @@
 
 h1 {
   text-align: center;
+  color: #242424;
 }
 
 .cards__container {
@@ -99,14 +100,17 @@ h1 {
   padding: 20px 30px 30px;
 }
 
+/* Original color for title and text was #252e48 
+if I ever want to switch it back*/
+
 .cards__item__title {
-  color: #252e48;
+  color: #242424;
   font-size: 24px;
   line-height: 40px;
 }
 
 .cards__item__text {
-  color: #252e48;
+  color: #242424;
   font-size: 16px;
   line-height: 24px;
   font-weight: lighter;
