--- a/src/App.css
+++ b/src/App.css
@@ -2,43 +2,20 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'PT Sans', sans-serif;
+  --white: #f5f5f5;
+  --black: #1b1d1e; /* Other Options: #161718, #242424 */
+  --type-color: #5eeb5b; /* Other Options: #ff5252, #2274a5 */
+  /* font-family: 'PT Sans', sans-serif; */
+  font-family: 'Open Sans', sans-serif;
 }
 
 .home,
 .aboutMe,
-.projects,
-.sign-up {
+.projects {
   display: flex;
   height: 90vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
-}
-
-.aboutMe {
-  background-image: url('/src/assets/images/aboutMe.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.projects {
-  background-image: url('/src/assets/images/projects2.gif');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.sign-up {
-  /* background-image: url('images/img-8.jpg'); */
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
+  background-color: var(--white);
 }
