--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,11 +1,11 @@
 .cards {
   padding: 4rem;
-  background: #fff;
+  background: var(--white);
 }
 
 h1 {
   text-align: center;
-  color: #242424;
+  color: var(--black);
 }
 
 .cards__container {
@@ -66,7 +66,7 @@ h1 {
   max-width: calc((100%) - 60px);
   font-size: 12px;
   font-weight: 700;
-  color: #fff;
+  color: var(--white);
   background-color: #1f98f4;
   box-sizing: border-box;
 }
@@ -100,17 +100,14 @@ h1 {
   padding: 20px 30px 30px;
 }
 
-/* Original color for title and text was #252e48 
-if I ever want to switch it back*/
-
 .cards__item__title {
-  color: #242424;
+  color: var(--black);
   font-size: 24px;
   line-height: 40px;
 }
 
 .cards__item__text {
-  color: #242424;
+  color: var(--black);
   font-size: 16px;
   line-height: 24px;
   font-weight: lighter;
