--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,43 +1,54 @@
-video {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -1;
-}
-
 .hero-container {
-  /* background: url('image here') center center/cover no-repeat; */
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2); */
   object-fit: contain;
+  background-color: var(--black);
 }
 
 .hero-container > h1 {
-  color: #fff;
-  font-size: 100px;
+  color: var(--white);
+  font-size: 80px;
   margin-top: -100px;
+  z-index: 1;
 }
 
 .hero-container > p {
   margin-top: 8px;
-  color: #fff;
-  font-size: 32px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  color: var(--white);
+  font-size: 48px;
+  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif; */
+  font-family: 'Open Sans', sans-serif;
+  z-index: 1;
 }
 
-.hero-btns {
-  margin-top: 32px;
+.hero-wave-back {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: -2%;
+  height: 35%;
+  opacity: 45%;
 }
 
-.hero-btns .btn {
-  margin: 6px;
+.hero-wave-mid {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: -2%;
+  height: 25%;
+  opacity: 70%;
+}
+
+.hero-wave-front {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: -2%;
+  height: 20%;
+  opacity: 100%;
 }
 
 .fa-play-circle {
@@ -48,6 +59,18 @@ video {
   .hero-container > h1 {
     font-size: 70px;
     margin-top: -150px;
+  }
+
+  .hero-wave-back {
+    margin-bottom: -5%;
+  }
+
+  .hero-wave-mid {
+    margin-bottom: -5%;
+  }
+
+  .hero-wave-front {
+    margin-bottom: -5%;
   }
 }
 
@@ -69,10 +92,22 @@ video {
   .btn {
     width: 100%;
   }
+
+  .hero-wave-back {
+    margin-bottom: -5%;
+  }
+
+  .hero-wave-mid {
+    margin-bottom: -5%;
+  }
+
+  .hero-wave-front {
+    margin-bottom: -5%;
+  }
 }
 
 :root {
-  --priamry: #fff;
+  --priamry: var(--white);
 }
 
 .btn {
@@ -85,10 +120,16 @@ video {
 
 .btn--outline {
   background-color: transparent;
-  color: #fff;
+  color: var(--white);
   padding: 8px 20px;
   border: 1px solid var(--priamry);
   transition: all 0.3s ease-out;
+}
+
+.btn--outline:hover {
+  color: var(--type-color);
+  border: 1px solid var(--type-color);
+  transition: all 0.2s ease-out;
 }
 
 .btn--large {
@@ -97,7 +138,44 @@ video {
 }
 
 .btn--large:hover {
-  background: #fff;
-  color: #242424;
+  background: var(--white);
+  color: var(--black);
   transition: all 0.3s ease-out;
+}
+
+/* Handles styling for the typed word effect */
+.word span {
+  color: var(--type-color);
+  position: relative;
+}
+
+.word span::after {
+  content: '';
+  width: 8px;
+  height: 100%;
+  background: var(--type-color);
+  display: block;
+  position: absolute;
+  right: -10px;
+  top: 0;
+  animation: blink 0.5s ease infinite alternate-reverse;
+}
+
+@keyframes blink {
+  from {
+    opacity: 100%;
+  }
+
+  to {
+    opacity: 0%;
+  }
+}
+
+.word.empty {
+  visibility: hidden;
+}
+
+.word.empty span::after {
+  visibility: visible;
+  right: 0;
 }
