--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,7 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
+  background-color: var(--black);
+  background-color: #161718;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -19,7 +21,7 @@
 }
 
 .navbar-logo {
-  color: #fff;
+  color: var(--white);
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
@@ -29,14 +31,14 @@
   align-items: center;
 }
 
-.fa-chevron-left {
-  margin-right: 0.5rem;
-  font-size: 1.8rem;
-}
-
 .fa-compact-disc {
   margin-right: 0.5rem;
   font-size: 2.2rem;
+}
+
+.fa-compact-disc:hover {
+  color: var(--type-color);
+  transition: all 0.2s ease-out;
 }
 
 .nav-menu {
@@ -55,7 +57,7 @@
 }
 
 .nav-links {
-  color: #fff;
+  color: var(--white);
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -64,12 +66,13 @@
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid #fff;
+  color: var(--type-color);
+  border-bottom: 4px solid var(--type-color);
   transition: all 0.2s ease-out;
 }
 
 .fa-bars {
-  color: #fff;
+  color: var(--white);
 }
 
 .nav-links-mobile {
@@ -98,11 +101,12 @@
   }
 
   .nav-menu.active {
-    background: #242222;
+    background: var(--black);
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
+    display: block;
   }
 
   .nav-links {
@@ -113,8 +117,8 @@
   }
 
   .nav-links:hover {
-    background-color: #fff;
-    color: #242424;
+    background-color: var(--type-color);
+    color: var(--black);
     border-radius: 0;
   }
 
@@ -122,7 +126,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    transform: translate(25%, 60%);
   }
 
   .menu-icon {
@@ -136,7 +140,7 @@
   }
 
   .fa-times {
-    color: #fff;
+    color: var(--white);
     font-size: 2rem;
   }
 
@@ -149,15 +153,15 @@
     text-decoration: none;
     font-size: 1.5rem;
     background-color: transparent;
-    color: #fff;
+    color: var(--white);
     padding: 14px 20px;
-    border: 1px solid #fff;
+    border: 1px solid var(--white);
     transition: all 0.3s ease-out;
   }
 
   .nav-links-mobile:hover {
-    background: #fff;
-    color: #242424;
+    background: var(--type-color);
+    color: var(--black);
     transition: 250ms;
   }
 }
