--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -32,7 +32,7 @@
   bottom: 0;
   margin-bottom: -2%;
   height: 35%;
-  opacity: 45%;
+  opacity: 0.45;
 }
 
 .hero-wave-mid {
@@ -40,7 +40,7 @@
   bottom: 0;
   margin-bottom: -2%;
   height: 25%;
-  opacity: 70%;
+  opacity: 0.7;
 }
 
 .hero-wave-front {
@@ -48,7 +48,7 @@
   bottom: 0;
   margin-bottom: -2%;
   height: 20%;
-  opacity: 100%;
+  opacity: 1;
 }
 
 .fa-play-circle {
