--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url(//fonts.googleapis.com/css?family=Open+Sans);
 @import url(//fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap);
 
 * {
@@ -12,6 +13,7 @@
 
 .home,
 .aboutMe,
+.skills,
 .projects {
   display: flex;
   height: 90vh;
